# bollard

./: .gitignore  Cargo.toml  DESIGN.md  README.md
agent/: agent.py
config/: tools.yaml
crates/bollard-broker/: Cargo.toml
crates/bollard-broker/src/: main.rs
crates/bollard-http/: Cargo.toml
crates/bollard-http/src/: lib.rs
crates/bollard-infer/: Cargo.toml
crates/bollard-infer/src/: main.rs
crates/bollard-mcp/: Cargo.toml
crates/bollard-mcp/src/: main.rs
crates/bollard-openshell/: Cargo.toml
crates/bollard-openshell/src/: lib.rs  main.rs
crates/bollard-openshell/tests/: conformance.rs
crates/bollard-proxy/: Cargo.toml
crates/bollard-proxy/src/: main.rs
deploy/: agent.Dockerfile  bollard.Dockerfile  docker-compose.yml
docs/: index.html  openshell.md
policy/: default.yaml
scripts/: demo.sh
site/: index.html
tools/openshell-validate/: Cargo.toml
tools/openshell-validate/src/: main.rs
