[package]
name = "bollard-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bollard taint store + policy decision engine."

[[bin]]
name = "bollard-broker"
path = "src/main.rs"

[dependencies]
bollard-http = { path = "../bollard-http" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
