[package]
name = "bollard-infer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bollard inference gateway: routes model calls local-vs-cloud by sensitivity."

[[bin]]
name = "bollard-infer"
path = "src/main.rs"

[dependencies]
bollard-http = { path = "../bollard-http" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde_json = "1"
