[package]
name = "bollard-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bollard egress boundary: deny-by-default forward proxy for caged agents."

[[bin]]
name = "bollard-proxy"
path = "src/main.rs"

[dependencies]
bollard-http = { path = "../bollard-http" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
serde_json = "1"
